feat(): 支持容器移动，有关系的节点也跟随移动
Closes CMDB_VIEW-254

--- a/bricks/diagram/src/shared/canvas/styles.shadow.css
+++ b/bricks/diagram/src/shared/canvas/styles.shadow.css
@@ -173,8 +173,8 @@
     padding: 0.5em;
     text-align: center;
     font-size: 16px;
-    font-weight: 600;
     background-color: rgba(119, 141, 195, 0.6);
+    overflow: hidden;
   }
   .horizontal {
     height: max-content;
