--- a/bricks/form/src/radio/index.shadow.css
+++ b/bricks/form/src/radio/index.shadow.css
@@ -171,7 +171,7 @@
 
 :host([type="button"]) {
   width: max-content;
-  -webkit-appearance: none;
+  -webkit-appearance: none !important;
   .radio-group {
     gap: 0;
   }
