--- a/bricks/ai/src/chat-view/components/MessageItem/Markdown/CodeBlock/CodeBlock.shadow.css
+++ b/bricks/ai/src/chat-view/components/MessageItem/Markdown/CodeBlock/CodeBlock.shadow.css
@@ -60,7 +60,7 @@
       margin-top: 4px;
       font-size: 12px;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
     }
   }
   .chart-wrapper {
