fix(): fix code-editor outline

--- a/bricks/vs/src/code-editor/index.css
+++ b/bricks/vs/src/code-editor/index.css
@@ -6,18 +6,17 @@
   cursor: pointer;
 }
 
+.monaco-editor {
+  outline-width: 0;
+}
+
 .monaco-editor .overflow-guard {
   border-radius: var(--antd-button-border-radius);
-  background: var(--color-border-divider-line);
   border: 1px solid var(--color-border-divider-line);
 }
 
 .code-editor-wrapper.error .overflow-guard {
-  outline: 1px solid var(--antd-error-color);
-}
-
-.code-editor-wrapper.expanded.error .overflow-guard {
-  border: 1px solid var(--antd-error-color);
+  border-color: var(--antd-error-color);
 }
 
 .code-editor-wrapper {
