--- a/bricks/data-view/src/china-map-chart/styles.shadow.css
+++ b/bricks/data-view/src/china-map-chart/styles.shadow.css
@@ -25,9 +25,10 @@
     )
     2 2;
   backdrop-filter: blur(2px);
-  transform: translate(15%, 10%) !important;
+  transform: translate(30px, -10px) !important;
   border-right-style: none;
   color: rgba(255, 255, 255, 1);
+  padding-left: 8px;
 }
 
 .iconImg {
@@ -35,5 +36,10 @@
   z-index: 5;
   src: "./assets/default.png";
   backdrop-filter: blur(2px);
-  transform: translate(-50%, 50%) !important;
+  transform: translate(0%, 0%) !important;
+}
+.detailContent {
+  position: absolute;
+  opacity: 0.8;
+  z-index: 20;
 }
