fix(eo-select): only add margin for select options if needed

--- a/bricks/form/src/select/index.shadow.css
+++ b/bricks/form/src/select/index.shadow.css
@@ -266,6 +266,9 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.select-option-selected .option:not(:last-child) {
   margin-right: 22px;
 }
 
@@ -273,6 +276,9 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+}
+
+.dropdown-list .option .label:not(:last-child) {
   margin-right: 8px;
 }
 
