--- a/bricks/data-view/src/china-map-chart/styles.shadow.css
+++ b/bricks/data-view/src/china-map-chart/styles.shadow.css
@@ -25,7 +25,7 @@
     )
     2 2;
   backdrop-filter: blur(2px);
-  transform: translate(30px, -10px) !important;
+  transform: translate(20px, -150%) !important;
   border-right-style: none;
   color: rgba(255, 255, 255, 1);
   padding-left: 8px;
@@ -36,10 +36,16 @@
   z-index: 5;
   src: "./assets/default.png";
   backdrop-filter: blur(2px);
-  transform: translate(0%, 0%) !important;
 }
 .detailContent {
   position: absolute;
   opacity: 0.8;
   z-index: 20;
+}
+.map {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
