fix(): 优化属性编辑器
1. 调整样式
2. 优化颜色选择器

refs NEXT_BUILDER-5207

--- a/bricks/visual-builder/src/property-editor/components/AdvancedFormItem/AdvancedFormItem.shadow.css
+++ b/bricks/visual-builder/src/property-editor/components/AdvancedFormItem/AdvancedFormItem.shadow.css
@@ -11,12 +11,12 @@
     eo-icon[icon="code"] {
       cursor: pointer;
       padding: 2px 4px;
-      background: var(--palette-gray-7);
       border-radius: 6px;
+      color: var(--text-color-secondary);
 
       &.isActive {
         background: var(--color-brand);
-        color: #fff;
+        color: var(--color-normal-text);
       }
     }
   }
