--- a/bricks/data-view/src/china-map-chart/styles.shadow.css
+++ b/bricks/data-view/src/china-map-chart/styles.shadow.css
@@ -7,7 +7,7 @@
 }
 .text {
   position: absolute;
-  z-index: 5;
+  z-index: 6;
   height: 24px;
   background: linear-gradient(
     262deg,
@@ -48,4 +48,11 @@
   left: 0;
   right: 0;
   bottom: 0;
+}
+.leftText {
+  margin-left: -20px;
+  transform: translate(-100%, -150%) !important;
+}
+.topText {
+  margin-top: -10px;
 }
