fix(): refine raw-data-preview style

--- a/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
+++ b/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
@@ -24,6 +24,11 @@ body {
   background: var(--body-background);
 }
 
+.body-cell {
+  display: flex;
+  align-items: center;
+}
+
 .last-col-cell {
   border-right-color: transparent;
 }
