fix(): fix form-item labelBrick alignCenter

--- a/bricks/form/src/form-item/FormItem.shadow.less
+++ b/bricks/form/src/form-item/FormItem.shadow.less
@@ -109,6 +109,11 @@
   list-style: none;
   font-feature-settings: "tnum";
   vertical-align: top;
+
+  .form-item-label {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .form-item.vertical {
