feat(): update form-item helpBrick

--- a/bricks/form/src/form-item/FormItem.shadow.less
+++ b/bricks/form/src/form-item/FormItem.shadow.less
@@ -166,10 +166,14 @@
 
 .form-item-control {
   display: flex;
-  gap: 4px;
   slot {
     display: block;
     width: 100%;
+  }
+  .help-brick {
+    color: var(--color-secondary-text, #8c8c8c);
+    font-size: 14px;
+    line-height: 20px;
   }
 }
 
