--- a/bricks/presentational/src/card-item/styles.shadow.css
+++ b/bricks/presentational/src/card-item/styles.shadow.css
@@ -78,6 +78,8 @@ eo-link {
   overflow: hidden;
   cursor: pointer;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .card-wrapper:hover {
@@ -135,6 +137,8 @@ eo-link {
   gap: 12px;
   padding: 0 16px 16px 16px;
   align-items: center;
+  flex: 1;
+  min-height: 0;
 }
 
 eo-tooltip::part(popup) {
