--- a/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
+++ b/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
@@ -40,3 +40,14 @@ body {
 .form-container > ::part(message) {
   display: none;
 }
+
+.list {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.raw-content {
+  white-space: pre-wrap;
+  color: var(--text-color-secondary);
+}
