fix(): refine comment tips

--- a/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
+++ b/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
@@ -51,3 +51,8 @@ body {
   white-space: pre-wrap;
   color: var(--text-color-secondary);
 }
+
+.tips {
+  color: var(--text-color-secondary);
+  font-weight: normal;
+}
