fix(raw-data-preview): approve generations

--- a/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
+++ b/bricks/visual-builder/src/raw-data-preview/preview.shadow.css
@@ -27,6 +27,7 @@ body {
 .body-cell {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 .last-col-cell {
@@ -45,14 +46,25 @@ body {
   display: flex;
   flex-direction: column;
   gap: 8px;
+  overflow: hidden;
 }
 
 .raw-content {
-  white-space: pre-wrap;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   color: var(--text-color-secondary);
+}
+
+.raw-content.expand {
+  white-space: pre-wrap;
 }
 
 .tips {
   color: var(--text-color-secondary);
   font-weight: normal;
+}
+
+.body-cell:not(:hover) .btn-toggle {
+  visibility: hidden;
 }
