fix(): refine textarea auto size

--- a/bricks/form/src/textarea/textarea.shadow.css
+++ b/bricks/form/src/textarea/textarea.shadow.css
@@ -19,7 +19,8 @@ textarea {
   box-sizing: border-box;
   border-radius: var(--antd-button-border-radius);
   border: 1px solid var(--antd-input-border-color);
-  line-height: 1.5715;
+  font-size: 14px;
+  line-height: 22px;
 }
 
 textarea:not(:disabled):hover {
