--- a/bricks/advanced/src/text-tooltip/styles.shadow.css
+++ b/bricks/advanced/src/text-tooltip/styles.shadow.css
@@ -13,5 +13,6 @@
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: var(--line-clamp);
+  white-space: normal;
   overflow: hidden;
 }
