--- a/bricks/basic/src/mini-actions/styles.shadow.css
+++ b/bricks/basic/src/mini-actions/styles.shadow.css
@@ -64,3 +64,15 @@ eo-icon {
   background: var(--antd-item-hover-bg);
   color: var(--color-brand);
 }
+
+.button-item-link {
+  width: 100%;
+  height: 100%;
+}
+
+.button-item-link,
+.button-item-link::part(link) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
