--- a/bricks/containers/src/page-view/styles.shadow.css
+++ b/bricks/containers/src/page-view/styles.shadow.css
@@ -9,10 +9,13 @@
   display: none;
 }
 
-.header-and-main,
-.aside {
+.header-and-main {
   height: 100%;
   min-width: 0;
+}
+
+.aside {
+  height: 100%;
 }
 
 .header-and-main {
