fix(): show-dialog内容过多时，底部按钮看不见 ref CUSTOMIZE-835

--- a/bricks/basic/src/data-providers/show-dialog/dialog.module.css
+++ b/bricks/basic/src/data-providers/show-dialog/dialog.module.css
@@ -10,6 +10,7 @@
   position: relative;
   top: 100px;
   border-radius: 6px;
+  max-height: calc(100% - 80px - var(--sl-spacing-2x-large));
 }
 
 .body {
