--- a/bricks/ai/src/chat-view/components/MessageItem/Markdown/markdown.shadow.css
+++ b/bricks/ai/src/chat-view/components/MessageItem/Markdown/markdown.shadow.css
@@ -190,6 +190,7 @@ img.ProseMirror-separator {
     0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
     var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+  width: max-content;
 }
 
 @media (min-width: 640px) {
@@ -201,6 +202,7 @@ img.ProseMirror-separator {
 .milkdown-theme-nord.prose td,
 .milkdown-theme-nord.prose th {
   padding: 0.75rem 1.5rem !important;
+  max-width: 20em;
 }
 
 .milkdown-theme-nord.prose tr {
