--- a/bricks/basic/src/page-title/styles.shadow.css
+++ b/bricks/basic/src/page-title/styles.shadow.css
@@ -5,3 +5,18 @@
 :host([hidden]) {
   display: none;
 }
+
+span {
+  display: block;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: var(--page-title-font-size);
+  font-weight: var(--page-title-font-weight);
+  line-height: var(--page-title-line-height);
+}
+
+.dashboard {
+  font-size: 38px;
+  line-height: 64px;
+}
