fix(): refine dropdown-select

--- a/bricks/basic/src/dropdown-select/styles.shadow.css
+++ b/bricks/basic/src/dropdown-select/styles.shadow.css
@@ -6,6 +6,10 @@
   display: none;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .trigger {
   display: flex;
   align-items: center;
@@ -26,6 +30,7 @@
 }
 
 .dropdown {
+  max-width: 500px;
   padding: 10px;
   border-radius: 4px;
   background: var(--antd-dropdown-menu-bg);
@@ -43,7 +48,6 @@ eo-menu-item::part(menu-item) {
   padding: 5px 12px;
   line-height: 22px;
   border-radius: var(--medius-border-radius);
-  min-width: max-content;
 }
 
 eo-menu-item:not([disabled]):hover::part(menu-item) {
